align-items navbar fix?

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,13 +37,14 @@ p {
 ul {
   list-style-type: none;
   margin: 0px;
-  padding: 10px;
+  padding: 0px;
   overflow: hidden;
   position: fixed;
   top: 0;
   width: 95%;
   background-color: #2F4C39;
   justify-content: space-between;
+  align-items: stretch;
 }
 
 li {
@@ -80,7 +81,7 @@ li a:hover {
 
 .paragraph {
   width: 75%;
-  align-self: flex-end;
+  align-items: flex-end;
   align-content: center;
   background-color: #2F4C39;
   opacity: 30%;
